after fix css (overflow: overlay)

--- a/client/app/styles/app_style.css
+++ b/client/app/styles/app_style.css
@@ -19,4 +19,6 @@ body{
 
     font-size: 25px;
     text-align: center;
+    
+    overflow: overlay;
 }
